# season-simulator

./: CMakeLists.txt  README.md
.github/workflows/: cmake-ci.yml
libs/: CMakeLists.txt
libs/common/: conference.h  division.h  game.h  simulator.h  team.h
libs/common/src/: conference.cpp  division.cpp  game.cpp  simulator.cpp  team.cpp
projects/base/: CMakeLists.txt
projects/base/src/: main.cpp
projects/clubsoccer/: CMakeLists.txt  simulator.h
projects/clubsoccer/src/: main.cpp  simulator.cpp
projects/nfl/: CMakeLists.txt  simulator.h
projects/nfl/src/: main.cpp  simulator.cpp
